# design-patterns-cpp

./: CMakeLists.txt
abstract-factory/: CMakeLists.txt  abstract_factory.h  concrete_factory_x.h  concrete_factory_y.h  concrete_product_a_x.h  concrete_product_a_y.h  concrete_product_b_x.h  concrete_product_b_y.h  main.cpp  product_a.h  product_b.h
bridge/: CMakeLists.txt  abstraction.h  concrete_implementor_a.cpp  concrete_implementor_a.h  concrete_implementor_b.cpp  concrete_implementor_b.h  implementor.h  main.cpp  refined_abstraction.cpp  refined_abstraction.h
builder/: CMakeLists.txt  README.md  builder.h  concrete_builder_x.h  concrete_builder_y.h  director.h  main.cpp  product.h
decorator/: CMakeLists.txt  component.h  concrete_component.cpp  concrete_component.h  concrete_decorator_a.cpp  concrete_decorator_a.h  concrete_decorator_b.cpp  concrete_decorator_b.h  decorator.cpp  decorator.h  main.cpp
factory-method/: CMakeLists.txt  concrete_creator_a.h  concrete_creator_b.h  concrete_product_a.h  concrete_product_b.h  creator.h  main.cpp  product.h
observer/: CMakeLists.txt  README.md  concrete_observer.cpp  concrete_observer.h  concrete_subject.cpp  concrete_subject.h  main.cpp  observer.h  subject.cpp  subject.h
prototype/: CMakeLists.txt  README.md  concrete_prototype_a.h  concrete_prototype_b.h  main.cpp  prototype.h
strategy/: CMakeLists.txt  Strategy.cpp  concrete_strategy_a.h  concrete_strategy_b.h  concrete_strategy_c.h  context.cpp  context.h  main.cpp  strategy.h
template-method/: CMakeLists.txt  abstract_class.cc  abstract_class.h  (+3 more)
