cmake_minimum_required(VERSION 3.10)
project(design_patterns_cpp)

set(CMAKE_CXX_STANDARD 11)

add_subdirectory(template-method)
add_subdirectory(strategy)
add_subdirectory(observer)
add_subdirectory(decorator)
add_subdirectory(bridge)
add_subdirectory(factory-method)
add_subdirectory(abstract-factory)
add_subdirectory(prototype)
add_subdirectory(builder)